# passage-probe

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.toml  test.py
examples/: qna.csv
examples/markdown/: blog.md  boots_diary.md
examples/tabular/: fantasy_movies.csv  faq.csv  todo.csv
examples/test_docs/: test_doc_0.txt  test_doc_1.txt  test_doc_10.txt  test_doc_11.txt  test_doc_2.txt  test_doc_3.txt  test_doc_4.txt  test_doc_5.txt  test_doc_6.txt  test_doc_7.txt  test_doc_8.txt  test_doc_9.txt
src/passage_probe/: config.py  indexer.py  main.py  modal.tcss  tui.py  utils.py
src/passage_probe/db/: __init__.py  setup.py
src/passage_probe/search/: hybrid.py  lexical.py  semantic.py
