[project]
name = "passage-probe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=5.0.0",
    "sqlite-vec>=0.1.6",
    "textual>=5.0.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]    # Teach setuptools where to look
where = ["src"]                    # auto‑discovers my_package/*


[project.scripts]
passage-probe = "passage_probe.main:main"